fixing alignment of modal-large
the margin-left was pushing modal to left.

--- a/source/assets/stylesheets/locastyle/modules/_modal.sass
+++ b/source/assets/stylesheets/locastyle/modules/_modal.sass
@@ -36,7 +36,6 @@ $paddingDefault: 20px
 
   &.ls-modal-large
     width: $largeWidth
-    margin-left: -$largeWidth / 2
 
   &.ls-modal-small
     width: $smallWidth
@@ -44,7 +43,6 @@ $paddingDefault: 20px
 [data-modal-blocked]
   [data-dismiss]
     display: none
-
 
 .ls-modal-header
   padding: $paddingDefault
